Fix update ticket
